2006-11-15  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/FractalExplorer/FractalExplorer.c
	* plug-ins/FractalExplorer/Dialogs.c: Fixed bug #372671 and made
	loglog smoothing work again.

2006-11-14  Simon Budig  <simon@gimp.org>

	* plug-ins/script-fu/scripts/grid-system.scm: don't register in the
	menus. The script duplicates functionality of the better plugin,
	has a very obscure UI and registers under the same name as the plugin.

2006-11-14  Sven Neumann  <sven@gimp.org>

	* app/dialogs/file-open-location-dialog.c: don't use
	gimp_dialog_set_sensitive(); just make the entry not editable and
	the dialog's OK button insensitive.
	
	* app/widgets/gimpfiledialog.c
	* app/widgets/gimpwidgets-utils.[ch]: moved gimp_dialog_set_sensitive()
	implementation into gimp_file_dialog_set_sensitive().

2006-11-13  Sven Neumann  <sven@gimp.org>

	* app/tools/gimprectangletool.c: reduced the size of the side
	handles to two third the size of the corner handles.

2006-11-13  Michael Natterer  <mitch@gimp.org>

	* app/xcf/xcf.c (xcf_load_invoker): fix g_str_has_prefix() change
	below. Now we can open XCF files again. Fixes bug #374657.

2006-11-12  Michael Natterer  <mitch@gimp.org>

	* app/base/base.c
	* app/core/gimp-user-install.c
	* app/core/gimpbrushgenerated-load.c
	* app/core/gimpcontainer.c
	* app/core/gimpgradient-load.c
	* app/core/gimppalette-load.c
	* app/core/gimpparamspecs-desc.c
	* app/dialogs/tips-parser.c
	* app/menus/plug-in-menus.c
	* app/plug-in/gimppluginmanager.c
	* app/plug-in/gimppluginprocedure.c
	* app/text/gimptext-parasite.c
	* app/tools/gimpforegroundselecttool.c
	* app/widgets/gimpselectiondata.c
	* app/xcf/xcf.c: use g_str_has_prefix() instead of strncmp().

2006-11-11  Michael Natterer  <mitch@gimp.org>

	* configure.in: added -Winit-self and -Wpointer-arith to CFLAGS.

2006-11-11  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpselectiontool.c
	(gimp_selection_tool_modifier_key): Fix behavior so that when Alt