@@ -1,3 +1,8 @@
+2006-11-14  Simon Budig  <simon@gimp.org>
+
+	* plug-ins/common/tiff.c: Import paths embedded into the
+	PHOTOSHOP-tag. Please test!
+
 2006-11-15  Mukund Sivaraman  <muks@mukund.org>
 
 	* plug-ins/FractalExplorer/FractalExplorer.c
